text overflowing outside password section fixed by adding word-break

--- a/style.css
+++ b/style.css
@@ -54,4 +54,11 @@ body{
        text-align: center;
        font-size: 30px;
    }
+
+   #password-section {
+
+    word-break: break-all;
+    
+   }
+
 }
